...
    const val Course = "course"
    const val Complete = "complete"
    const val Home = "home"
    const val LeaderBoard = "leader_board/{type}"
    const val AddDailyGoal = "add_daily_goal/{type}"
    const val CourseManage = "course manage"
    const val AddField = "add field"
    const val AddLanguage = "add language"
    const val ProfileScreen = "profile screen"
    const val SettingScreen = "setting screen"
    const val AddFriend = "add friend"
    const val Lesson = "lesson"
    const val SelectExercise = "select exercise"
    const val SpeakingScreen = "speaking screen"
    const val ListeningScreen1 = "listening screen 1"
    const val ListeningScreen2 = "listening screen 2"
...
                UsernameScreen {
                    navController.navigate(Routes.DailyGoal)
                }
            }

            composable(Routes.DailyGoal) {
                SetDailyGoalScreen(
                    NavigateToNotification = { navController.navigate(Routes.Notify) },
                    NavigateToUserName = { navController.navigate(Routes.UserName) }

                )
            }

            composable(Routes.Notify) { //add more when new buttom to go back
                EnableNotifyScreen(
                    NavigateToCourse = { navController.navigate(Routes.Course) },
                    NavigateToGoal = { navController.navigate(Routes.DailyGoal) }
                )
            }

            composable(Routes.Course) {
                CourseManageScreen(
                    NavigateToComplete = { navController.navigate(Routes.Complete) },
                    NavigateToNotification = { navController.navigate(Routes.Notify) }
                )
            }

            composable(Routes.Complete) {
...
            LoadingScreen3 {
                navController.navigate(Routes.Home)
            }
        }

        composable(Routes.Home) {
            HomeScreen(
                NavigateToLeader = {navController.navigate("${Routes.LeaderBoard}/home")},
                NavigateToAddLanguage = {navController.navigate("${Routes.AddDailyGoal}/language")}, //go the same screen but it depends on the button you have clicked
                NavigateToAddCourse = {navController.navigate("${Routes.AddDailyGoal}/course")}, //here i define the value of "type"
                NavigateToLoadingScreen2 = {navController.navigate(Routes.Loading2)},
                NavigateToProfile = {navController.navigate(Routes.ProfileScreen)},
                NavigateToLessons = {navController.navigate(Routes.SelectExercise)},
                NavigateToQuiz = {navController.navigate("${Routes.ListeningScreen1}/quiz")}
                )
        }

        composable("${Routes.LeaderBoard}/{type}") { backStackEntry ->
            var type = backStackEntry.arguments?.getString("type")
            LeaderBoardScreen(
                type = type,
                NavigateBack = {
                    if (type == "home") { navController.navigate(Routes.Home)
                    } else if (type == "profile") { navController.navigate(Routes.ProfileScreen)}
                    else if (type == "exercise") { navController.navigate(Routes.SelectExercise)}
                }
...
                navController.navigate(Routes.Home)
            }
        }

        composable("${Routes.AddDailyGoal}/{type}"){ backStackEntry ->
            val type = backStackEntry.arguments?.getString("type")
            AddDailyGoalScreen(
                type = type,
                MainButtonClick = {
                    when (type) { //Go to a different screen depending on the type value
                        "language" -> navController.navigate(Routes.AddLanguage)
                        "course" -> navController.navigate(Routes.AddField)
                    }
...
            )
        }



        composable(Routes.CourseManage) {
            CourseManageButton(
                NavigateToAddCourse = {navController.navigate("${Routes.AddDailyGoal}/course")},
                NavigateToAddLanguage = {navController.navigate("${Routes.AddDailyGoal}/language")},
                NavigateToLoadingScreen2 = {navController.navigate(Routes.Loading2)}
            )
        }

        composable(Routes.AddField) {
            AddFieldScreen(
                NavigateToDailyGoal = {navController.navigate("${Routes.AddDailyGoal}/course")},
                NavigateToComplete = {navController.navigate(Routes.Complete)}

            )
        }

        composable(Routes.AddLanguage) {
            AddLanguageScreen(
                NavigateToComplete = {navController.navigate(Routes.Complete)},
                NavigateToDailyGoal = {navController.navigate("${Routes.AddDailyGoal}/language")} //contains type's value (example: it come back to AddDailyGoal/language
            )
        }

        composable(Routes.ProfileScreen) {
...
                NavigateToProfile = {navController.navigate(Routes.ProfileScreen)},
                Restart = {navController.navigate(Routes.Splash)}
            )
        }

        composable(Routes.AddFriend) {
            AddFriendScreen(
                NavigateToProfile = {navController.navigate(Routes.ProfileScreen)}
            )
        }

        composable(Routes.Lesson) {
            LessonCard(
...
