...
import com.example.fieldwise.ui.widget.PleaseSelectPopUp
import com.example.fieldwise.ui.widget.ProgressType
import com.example.fieldwise.ui.widget.SetUpButton

@Composable
fun AddLanguageScreen(modifier: Modifier = Modifier, NavigateToComplete: () -> Unit, NavigateToDailyGoal:() -> Unit) {
    val fieldOptions = listOf("Computer Science", "Geography")
    val fieldIconResIds = listOf(
        R.drawable.computer,
        R.drawable.map
    )
    val langOptions = listOf("English", "Thai")
    val langIconResIds = listOf(
        R.drawable.eng_circle,
        R.drawable.thai_circle
    )

    var selectedOption1 by remember { mutableStateOf("") }
...
    Column(modifier = modifier.fillMaxSize()
        .padding(start = 20.dp, end = 20.dp).testTag("AddLanguageScreen")) {
        Spacer(modifier = Modifier.height(70.dp))
        Row(
            verticalAlignment = Alignment.CenterVertically // Align items in the center vertically
        ) {
            GoBackButton(onClick = { NavigateToDailyGoal() })
            Spacer(modifier = Modifier.width(10.dp))
            LinearProgress(target = 0.7f, progressType = ProgressType.LIGHT)
        }

        Column(modifier = modifier
            .fillMaxHeight()) {
...
                )

            }
            Spacer(modifier = Modifier.height(30.dp))
            SetUpButton(langOptions, descriptions = null, iconResIds = langIconResIds, onSelectionChange = {selectedOption2 = it})
            Spacer(modifier = Modifier.height(30.dp))
            MainButton(button = "CONTINUE",
                onClick = { if (selectedOption1.isEmpty() or selectedOption2.isEmpty()) {
                    showDialog = true
                } else {NavigateToComplete()}
                          },
                mainButtonType = MainButtonType.BLUE, isEnable = true)
        }
...
