...
    var dialogType by remember { mutableStateOf("") }
    val isDropDownExpanded = remember {
        mutableStateOf(false)
    }


    val dailygoals = listOf("5 min / day", "10 min / day", "15 min / day", "20 min / day")

    Column(
        modifier = Modifier.fillMaxSize().padding(20.dp),
        horizontalAlignment = Alignment.CenterHorizontally
    ) {
        Text(text = "Daily Goal",
...
            Row(verticalAlignment = Alignment.CenterVertically,
                horizontalArrangement = Arrangement.Center,
                modifier = Modifier
                    .width(346.dp)
                    .height(60.dp)
                    .background(color = Color.White)
                    .testTag("DropDownMenu")
                    .border(
                        width = 2.5.dp,
                        color = Color(0xFFD9D9D9),
                        shape = RoundedCornerShape(size = 10.dp)
                    )
                    .clickable {
...
                    )
                }
            }

        }
        Spacer(modifier = Modifier.height(40.dp))
        MainButton(button = "SAVE CHANGES", onClick = {
            dialogType = "SAVE_CHANGES"
            showDialog = true

        }, mainButtonType = MainButtonType.BLUE, isEnable = true)
        val selectedOption = if (itemPosition.value == -1) placeholder else dailygoals[itemPosition.value]
        LaunchedEffect(selectedOption) { dailyGoal = selectedOption }
...
