...
                )

                Row(
                    modifier = modifier.fillMaxWidth(),
                    horizontalArrangement = Arrangement.Center
                ) {
                    OutlinedTextField(
                        singleLine = true,
                        modifier = modifier
                            .size(300.dp, 55.dp)
                            .border(3.dp, Color(0xFF1AB8E8), RoundedCornerShape(10.dp))
                            .clip(shape = RoundedCornerShape(10.dp))
                            .testTag("SearchFriendField"),
                        value = searchText,
                        onValueChange = { searchText = it },
                        colors = TextFieldDefaults.outlinedTextFieldColors(
                            containerColor = Color(0xFF066076),
                            focusedBorderColor = Color.Transparent,
                            unfocusedBorderColor = Color.Transparent
...
                                    Text(
                                        text = item.name,
                                        color = Color.White,
                                        fontSize = 18.sp
                                    )
                                }
                                AddFriendButton(onClick = { /* Add Friend to friend board */ })
                            }
                        }
                    }
                }
            }
        }
...
